@@ -254,14 +254,18 @@ enum far_key_code: unsigned int
 
 	// Additional
 
-	KEY_CTRLSHIFT            =KEY_CTRL|KEY_SHIFT,
-	KEY_ALTSHIFT             =KEY_ALT|KEY_SHIFT,
-	KEY_CTRLALT              =KEY_CTRL|KEY_ALT,
-	KEY_RCTRLSHIFT           =KEY_RCTRL|KEY_SHIFT,
-	KEY_RALTSHIFT            =KEY_RALT|KEY_SHIFT,
-	KEY_RCTRLRALT            =KEY_RCTRL|KEY_RALT,
-	KEY_CTRLRALT             =KEY_CTRL|KEY_RALT,
-	KEY_RCTRLALT             =KEY_RCTRL|KEY_ALT,
+	KEY_CTRLSHIFT            = KEY_CTRL  | KEY_SHIFT,
+	KEY_RCTRLSHIFT           = KEY_RCTRL | KEY_SHIFT,
+	KEY_ALTSHIFT             = KEY_ALT   | KEY_SHIFT,
+	KEY_RALTSHIFT            = KEY_RALT  | KEY_SHIFT,
+	KEY_CTRLALT              = KEY_CTRL  | KEY_ALT,
+	KEY_CTRLRALT             = KEY_CTRL  | KEY_RALT,
+	KEY_RCTRLALT             = KEY_RCTRL | KEY_ALT,
+	KEY_RCTRLRALT            = KEY_RCTRL | KEY_RALT,
+	KEY_CTRLALTSHIFT         = KEY_CTRL  | KEY_ALT  | KEY_SHIFT,
+	KEY_CTRLRALTSHIFT        = KEY_CTRL  | KEY_RALT | KEY_SHIFT,
+	KEY_RCTRLALTSHIFT        = KEY_RCTRL | KEY_ALT  | KEY_SHIFT,
+	KEY_RCTRLRALTSHIFT       = KEY_RCTRL | KEY_RALT | KEY_SHIFT,
 
 	KEY_CTRL0                =KEY_CTRL+'0',
 	KEY_CTRL1                =KEY_CTRL+'1',
