@@ -1405,6 +1405,13 @@ bool Viewer::process_key(const Manager::Key& Key)
 	if (!ViOpt.PersistentBlocks &&
 		none_of(LocalKey,
 			KEY_NONE,
+			KEY_SHIFT,
+			KEY_CTRL, KEY_RCTRL,
+			KEY_ALT, KEY_RALT,
+			KEY_CTRLSHIFT, KEY_RCTRLSHIFT,
+			KEY_ALTSHIFT, KEY_RALTSHIFT,
+			KEY_CTRLALT, KEY_RCTRLALT, KEY_CTRLRALT, KEY_RCTRLRALT,
+			KEY_CTRLALTSHIFT, KEY_CTRLRALTSHIFT, KEY_RCTRLALTSHIFT, KEY_RCTRLRALTSHIFT,
 			KEY_CTRLINS, KEY_RCTRLINS,
 			KEY_CTRLNUMPAD0, KEY_RCTRLNUMPAD0,
 			KEY_CTRLC, KEY_RCTRLC,
